--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "uninstall": "^0.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
