--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@datepicker-react/hooks": "^2.8.4",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
+    "@formkit/auto-animate": "^1.0.0-beta.6",
     "@headlessui/react": "^1.7.7",
     "@mui/x-date-pickers-pro": "^5.0.16",
     "@tailwindcss/forms": "^0.5.3",
