--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-day-picker": "^8.5.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
