--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 REACT_APP_BASE_URL = https://mvp-user-service.onrender.com
 
-REACT_APP_MAIN = https://handys.netlify.app/
+REACT_APP_MAIN = https://handys.netlify.app
 
 REACT_APP_PROVIDER = https://service-handys.netlify.app
 
